--- a/package.json
+++ b/package.json
@@ -9,14 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@ignite-ui/react": "^2.2.4",
+    "@prisma/client": "^5.8.1",
     "@types/node": "20.11.0",
     "@types/react": "18.2.47",
     "@types/react-dom": "18.2.18",
+    "axios": "^1.6.5",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
+    "next-seo": "^6.4.0",
+    "nookies": "^2.5.2",
+    "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.3.3"
+    "react-hook-form": "^7.49.3",
+    "typescript": "5.3.3",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@rocketseat/eslint-config": "^2.1.0",
+    "@types/cookie": "^0.6.0",
+    "prisma": "^5.8.1"
   }
 }
